# genome-lab-project

./: .gitignore  .pre-commit-config.yaml  README.md  genome-lab-cuda.yml  pyproject.toml
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=0-step=15.ckpt
lightning_logs/version_1/: events.out.tfevents.1760694155.CORE-I5.16731.0
lightning_logs/version_1/checkpoints/: epoch=2-step=45.ckpt
lightning_logs/version_2/: events.out.tfevents.1760695336.CORE-I5.19714.0
lightning_logs/version_2/checkpoints/: epoch=0-step=15.ckpt
lightning_logs/version_3/: events.out.tfevents.1760695669.CORE-I5.20789.0
lightning_logs/version_3/checkpoints/: epoch=3-step=60.ckpt
lightning_logs/version_4/: events.out.tfevents.1760695990.CORE-I5.21859.0
lightning_logs/version_4/checkpoints/: epoch=0-step=29.ckpt
lightning_logs/version_5/: events.out.tfevents.1760696666.CORE-I5.23753.0
lightning_logs/version_5/checkpoints/: epoch=8-step=513.ckpt
scripts/: download_example_data.sh
src/genome_anno/: __init__.py
src/genome_anno/config/: config.yaml
src/genome_anno/config/model/: cnn1d.yaml
src/genome_anno/config/train/: default.yaml
src/genome_anno/data/: bam_io.py  fasta_io.py  gff_io.py  hic_cooler_io.py
src/genome_anno/dl/: datasets.py  infer.py  models.py  train.py
src/genome_anno/utils/: env_check.py  logging.py  seed.py
tests/: test.py  test_models.py
